[project]
name = "nyc-pizza"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade>=3.3.2",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
